# PyReads

./: .pre-commit-config.yaml  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: bump-version.yml  pre-commit.yml  python-publish.yml
notebooks/: build.ipynb
pyreads/: __init__.py  _core.py  _html.py  _http.py  _models.py  _parser.py  _utilities.py  core.py  models.py  utilities.py
pyreads/tests/: test__http.py  test__parser.py  test_core.py  test_models.py
pyreads/tests/test_inputs/: input.html
tests/: __init__.py  test_models.py  test_parser.py
