[project]
dependencies = [
    "httpx",
    "bs4",
    "lxml",
    "pandas",
    "pydantic"
]
name = "pyreads"
description = "Goodreads webscraper"
readme = "README.md"
requires-python = "==3.13.*"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyreads.__version__"}

[tool.setuptools.packages.find]
include = ["pyreads*"]
exclude = ["notebooks*", "pyreads.tests*", "pyreads.tests.test_inputs*"]

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  "jupyter",
  "pytest",
  "coverage",
  "bump"
]
