[project]
dependencies = [
    "httpx",
    "bs4",
    "lxml",
    "pandas",
    "pydantic"
]
name = "pyreads"
description = "Goodreads webscraper"
readme = "README.md"
requires-python = "==3.13.*"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyreads.__version__"}

[tool.setuptools.packages.find]
include = ["pyreads*"]
exclude = ["notebooks*", "pyreads.tests*", "pyreads.tests.test_inputs*"]

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  "jupyter",
  "pytest",
  "coverage",
  "bump"
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E","W","F","I",
    "UP","B",
    "SIM","C4",
    "ARG","ARG001",
    "RET","TRY",
    "DTZ",
    "S",
    "ANN",
    "RUF",
]
ignore = [
    "B008",
    "B904",
    "ANN401",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
